# thermal-pipeline

./: CMakeLists.txt  LICENSE  README.md  package.xml
config/: calibrator.rviz  pipeline.rviz
include/calibration/: calibrator.h
include/thermal_pipeline/: calibrator.h  hotspot_tracker.h  image_annotation.h  thermal_pipeline.h  thermal_pipeline_wrapper.h
launch/: thermal_calibration.launch  thermal_pipeline.launch
launch/test/: tests_thermal.launch
src/: calibrator.cpp  calibrator_node.cpp  thermal_node.cpp  thermal_pipeline.cpp
src/calibration/: calibrator.cpp  calibrator_node.cpp
src/thermal_pipeline/: hotspot_tracker.cpp  image_annotation.cpp  thermal_node.cpp  thermal_pipeline.cpp  thermal_pipeline_wrapper.cpp
test/: tests_thermal_pipeline.cpp
